--- a/css/main.css
+++ b/css/main.css
@@ -3556,8 +3556,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object{
   border-radius:2px;
   border-color:#eee;
   border-style:solid;
-  overflow-y:auto;
-  overflow-x:hidden;
+  overflow:auto;
 }
 
 .modal-closed{
@@ -4009,6 +4008,9 @@ input[type="checkbox"]:checked + label> .customCheckbox> span{
 }
 
 @media (max-width: 600px){
+  .modal{
+    height:100%;
+  }
   .closeModal{
     transform:scale(1.5);
     position:absolute;
@@ -4016,8 +4018,7 @@ input[type="checkbox"]:checked + label> .customCheckbox> span{
     right:21px;
   }
   #onetime{
-    overflow-y:auto;
-    overflow-x:hidden;
+    overflow:auto;
   }
   #onetime> form{
     -ms-flex-wrap:wrap;
